syntax = "proto3";

package revisionrun;

option go_package = "github.com/stuttgart-things/stageTime-server";


service Statuses {
  rpc GetStatus (StatusGetRequest) returns (StatusGetReply) {}
}

message StatusGetRequest {
  string revision_run_id = 1;
}

message Status {
  string id = 1;
  string updated = 2;
  string status = 3;
}

message StatusGetReply {
  Status status = 1;
}